# Integritas

./: .gitignore  Cargo.toml  LICENSE  README.md
migrations/: 20241208094055_create_users_table.up.sql
src/: config.rs  db.rs  main.rs
src/auth/: handlers.rs  models.rs  routes.rs  services.rs
