[package]
name = "Integritas"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
chrono = {version="0.4.38", features=["serde"]}
jsonwebtoken = "9.3.0"
serde = "1.0.215"
serde_json = "1.0.133"
sqlx = {version="0.8.2", features=["postgres", "runtime-tokio"]}
uuid = {version="1.11.0", features=["serde"]}
